# grace

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.md
.claude/agents/: rulesbook-pattern-auditor.md  techspec-reviewer.md
connector_docs/: cashfree.md
connector_docs/cashfree/: 00_docs_api-reference_authentication.md  01_docs_api-reference_overview.md  02_docs_api-reference_payments_enums.md  03_docs_api-reference_payments_errors.md  04_docs_api-reference_payments_latest_orders_create.md  05_docs_api-reference_payments_latest_orders_get.md  06_docs_api-reference_payments_latest_orders_get-order-extended.md  07_docs_api-reference_payments_latest_orders_terminate.md  08_docs_api-reference_payments_latest_orders_update-order-extended.md  09_docs_api-reference_payments_latest_overview.md  10_docs_api-reference_payments_latest_payments_get.md  11_docs_api-reference_payments_latest_payments_get-payments-for-order.md  12_docs_api-reference_payments_latest_payments_webhooks.md  13_docs_api-reference_payments_latest_refunds_create.md  14_docs_api-reference_payments_latest_refunds_get.md  15_docs_api-reference_payments_latest_refunds_get-refunds-for-order.md  16_docs_api-reference_payments_latest_refunds_update-refund.md  17_docs_api-reference_payments_latest_refunds_webhooks.md  (+12 more)
src/: cli.py  config.py
tests/: conftest.py  test_addconnector_skill_shape.py  test_cashfree_spec.py  test_cli.py  test_cli_target_lang.py  test_config.py  test_docs_build.py  test_docs_build_v2.py  test_errors.py  test_fetch_docs.py  test_fetch_docs_domain.py  test_marker_dechurn.py  test_marker_template.py  test_output_node_next_step.py  test_pipeline_context.py  test_pipeline_gates.py  test_pipeline_marker.py  test_pipeline_orchestrate.py  test_pipeline_runner.py  test_pipeline_types.py  test_quality_rubric.py  test_quality_rubric_v2.py  test_rulebook_shape.py  test_skills_install.py
workflow/: 1_orchestrator.md  2.2_techspec.md  2.3_codegen.md  2.4_pr.md  2_connector.md
(+151 files in other folders)
