[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grace-cli"
version = "0.9.0"
description = "Grace: codegen tool that emits Python PSP connectors for the Orbit Lens ABC."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Symplora Engineering", email = "engineering@symplora.com"}]
keywords = ["cli", "codegen", "psp", "connector", "orbit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "rich>=13.5.0",
    "pydantic>=2.6.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/HR-intention/grace"
Repository = "https://github.com/HR-intention/grace"
Upstream = "https://github.com/juspay/hyperswitch-prism"

[project.scripts]
grace = "grace.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["grace*"]

[tool.setuptools.package-data]
grace = ["templates/*.j2", "skills_templates/**/*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests that may spawn subprocesses",
    "rubric: rubric-scoring tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
